Fixes alignment on hero skills - NextJS

--- a/src/components/Hero.module.scss
+++ b/src/components/Hero.module.scss
@@ -132,9 +132,12 @@
                     justify-content: center;
                     align-items: center;
                     display: flex;
-                    flex-flow: row nowrap;
-                    
+                    flex-flow: row nowrap;       
                 }
+            }
+
+            .nextJS {
+                align-items: baseline;
             }
 
             .smaller {
